// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Avatar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-egNfGp jwNySN"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-user fa-2x "
        data-icon="circle-user"
        data-prefix="fas"
        focusable="false"
        role="img"
        style="color: rgb(183, 190, 211); background: white;"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c39.77 0 72 32.24 72 72S295.8 272 256 272c-39.76 0-72-32.24-72-72S216.2 128 256 128zM256 448c-52.93 0-100.9-21.53-135.7-56.29C136.5 349.9 176.5 320 224 320h64c47.54 0 87.54 29.88 103.7 71.71C356.9 426.5 308.9 448 256 448z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iaZwhG StyledAvatar-sc-1suyamb-1 sc-egNfGp jwNySN"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        JD
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With First Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-egNfGp jwNySN"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        J
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Full Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-egNfGp jwNySN"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        JD
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Image 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bkfLqh StyledAvatar-sc-1suyamb-1 sc-egNfGp jwNySN"
    />
    
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Last Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-egNfGp jwNySN"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        D
      </div>
    </div>
  </div>
</div>
`;
